--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,15 @@
 *.egg
 *.egg-info
 
+.DS_Store
+.DS_Store?
+
 docs/images/1.mp4
 docs/images/2.mp4
 docs/images/3.mp4
 
 checkpoint/*
-
+savemodel/*
 output/*
 
 VisDrone2018-tf-yolo/images/*
